# OxideBSD

./: .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.txt  ROADMAP.md  build.rs
.cargo/: config.toml
docs/: BUSYBOX_APPLETS.md
modules/fat32/: Cargo.toml
modules/fat32/src/: lib.rs
modules/hello/: Cargo.toml
modules/hello/src/: lib.rs
modules/native_abi/: Cargo.toml
modules/native_abi/src/: lib.rs
modules/oxfs/: Cargo.toml
modules/oxfs/src/: lib.rs
modules/posix_compat/: Cargo.toml
modules/posix_compat/src/: lib.rs
modules/signal/: Cargo.toml
modules/signal/src/: lib.rs
src/: address_space.rs  allocator.rs  context_switch.rs  elf.rs  fd.rs  fpu.rs  gdt.rs  interrupts.rs  lib.rs  linux_syscall.rs  main.rs  memory.rs  module.rs  pic.rs  pipe.rs  process.rs  qemu.rs  reboot.rs  scheduler.rs  serial.rs  stdin.rs  syscall.rs  user_stack.rs  usermode.rs  vga.rs
tests/: basic_boot.rs  fork_wait.rs
userland/fork-exec-smoke/: Cargo.toml  build.rs  linker.ld
userland/fork-exec-smoke/src/: main.rs
userland/linux-syscall-smoke/: Cargo.toml  linker.ld
userland/linux-syscall-smoke/src/: main.rs
userland/musl-smoke/: main.c
userland/ring3-smoke/: Cargo.toml  linker.ld
userland/ring3-smoke/src/: main.rs
userland/stsh/: Cargo.toml  linker.ld
userland/stsh/src/: main.rs
