[workspace]
members = [
  "userland/ring3-smoke",
  "userland/linux-syscall-smoke",
  "userland/stsh",
  "modules/hello",
  "modules/native_abi",
  "modules/fat32",
]

[package]
name = "oxidebsd"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
linked_list_allocator = { version = "0.10", default-features = false }
pc-keyboard = "0.9"
spin = "0.9"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }

[[test]]
name = "basic_boot"
harness = false

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none",
]
test-success-exit-code = 33
test-timeout = 300
run-args = ["-serial", "stdio"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
