[workspace]
members = [
  "userland/ring3-smoke",
  "userland/stsh",
  "userland/fork-exec-smoke",
  "modules/hello",
  "modules/native_abi",
  "modules/posix_compat",
  "modules/signal",
  "modules/fat32",
  "modules/oxfs",
]

[package]
name = "oxidebsd"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
linked_list_allocator = { version = "0.10", default-features = false }
pc-keyboard = "0.9"
spin = "0.9"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }

[[test]]
name = "basic_boot"
harness = false

[[test]]
name = "fork_wait"
harness = false

# -m 1024 (was QEMU's own unstated default, ~128 MiB): modules/oxfs's own in-memory block pool
# grew to 32 MiB once the BusyBox roster grew to ~300 applets (see CLAUDE.md's BusyBox section),
# and -- since src/memory.rs's frame allocator never reclaims and this kernel maps every module
# page eagerly, not on demand -- that pool is a real physical-memory commitment from the moment
# modules/oxfs loads, on top of the kernel image/heap/stacks and the module's own embedded ELF
# bytes (~18 MiB) also resident at the same time. 1024 MiB leaves generous headroom over that, and
# scales src/allocator.rs's own RAM-proportional heap size up to its 128 MiB ceiling too -- safe to
# do now that src/allocator.rs's init_heap and src/module.rs's map_region both map freshly
# allocated pages with `.ignore()` instead of `.flush()` (a real, measured multi-minute boot stall
# otherwise: this RAM bump alone, before that fix, pushed the heap to ~32,000 pages, each
# individually `invlpg`-flushed and trapped under QEMU's software TCG emulation).
[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none",
  "-m", "1024",
]
test-success-exit-code = 33
test-timeout = 300
run-args = ["-serial", "stdio", "-m", "1024"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
